[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py115"
authors = [
    {name = "deadblue", email = "public@dead.blue"}
]
description = "Python SDK for 115 cloud storage service."
readme = "README.rst"
license = { file = "LICENSE" }
keywords = [
    "115", "cloud-storage", "sdk"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/deadblue/py115"
Documentation = "https://py115.readthedocs.io/en/latest/"

[tool.setuptools]
packages = [
    "py115",
    "py115._internal",
    "py115._internal.api",
    "py115._internal.crypto",
    "py115._internal.protocol"
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "py115.VERSION"}
