[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "py115"
dynamic = ["version"]
description = "Python SDK for 115 cloud storage service."
keywords = [
    "115", "cloud-storage", "sdk"
]
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "deadblue", email = "public@dead.blue"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "httpx >= 0.27.0",
    "lz4 >= 4.0.0",
    "pycryptodome >= 3.17.0",
]

[project.urls]
Homepage = "https://github.com/deadblue/py115"
Documentation = "https://py115.readthedocs.io/en/latest/"

[tool.hatch.build.targets.wheel]
packages = [ "src/py115" ]

[tool.hatch.version]
path = "src/py115/__about__.py"
